# BitrateSceneSwitch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  installer.nsi
.github/workflows/: build.yml
data/locale/: en-US.ini
src/: chat-client.cpp  chat-client.hpp  config.cpp  config.hpp  http-client.cpp  http-client.hpp  kick-chat.cpp  kick-chat.hpp  plugin-main.cpp  settings-dialog.cpp  settings-dialog.hpp  stream-server.cpp  stream-server.hpp  switcher.cpp  switcher.hpp  twitch-pubsub.cpp  twitch-pubsub.hpp  update-checker.cpp  update-checker.hpp  websocket-vendor.cpp  websocket-vendor.hpp  ws-client.cpp  ws-client.hpp
src/servers/: belabox.cpp  belabox.hpp  irlhosting.cpp  irlhosting.hpp  mediamtx.cpp  mediamtx.hpp  nginx.cpp  nginx.hpp  nimble.cpp  nimble.hpp  nms.cpp  nms.hpp  openirl.cpp  openirl.hpp  rist.cpp  rist.hpp  sls.cpp  sls.hpp  xiu.cpp  xiu.hpp
